# dashboard

./: .gitignore  pyproject.toml
src/: app.py
src/db/: __init__.py  config.py
src/db/migrations/: alembic.ini  env.py
src/db/migrations/versions/: 2025-01-03_initial_rev_c9a943af146a.py  2025-01-13_add_password_to_user_8c67527a9e62.py
src/models/: user.py
src/repositories/: user.py
src/routers/: __init__.py  login.py  users.py
